--- a/Index.html
+++ b/Index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Add a line to a map using a GeoJSON source</title>
+    <title>Mapbox GPX with Slope Shading</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <script src="/lib/font-awesome/js/all.js"></script>
     <script src='js/jquery.js'></script>
     <script src='js/togeojson.js'></script>
     <script src='js/geoJsonUtils.js'></script>
@@ -35,7 +37,6 @@
             display: block;
             margin-top: 0.5rem;
         }
-
     </style>
 </head>
 <body>
@@ -43,6 +44,9 @@
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#chooseGPXModal">
             Choose GPX File
         </button>
+        <a type="button" class="btn btn-primary" href="https://github.com/scottsan/mapbox-gpx-with-slope-shading/blob/main/README.md">
+            <i class="fas fa-question-circle"></i>
+        </a>
     </div>
     <div id="map"></div>
     <div class="modal" id="chooseGPXModal" tabindex="-1">
@@ -73,21 +77,26 @@
     <script>
 
         $(document).ready(function () {
+            // wire up an event to captures the user clicking a sample GPX file
             $("#chooseGPXModal #gpx-sample-file-links a").click(function () {
+                // load the clicked file
                 loadGpxFromUrl(map, $(this).attr("href"));
+                // cancel the click since it's an anchor element and we don't want the user browser to nav to the href
                 return false;
             })
+            // show the modal to allow the user to begin by selecting a GPX data source
+            $('#chooseGPXModal').modal('show');
         });
 
+        // wire up an event to capture when the user uploads their own GPX file
         document.getElementById('gpxFileUpload').addEventListener('change', function (e) {
+            // process the selected file
             handleFileSelect(e);
-
         }, false);
 
+        // set the mapbox token
         mapboxgl.accessToken = 'pk.eyJ1IjoibWl0Y2hlbGx4IiwiYSI6ImNsMzRucWc2cDAwaWkzbHA5ZjF6YTB1b2cifQ.-ZHOTJY15FedqvH42WkwCg';
-
-        var defaultGpxFileUrl = 'gpx/holycross1.gpx';
-
+        // initialize the map with the 14er style
         const map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/mitchellx/cl37syevj001514qnctrh8pql/draft',
@@ -95,10 +104,14 @@
             zoom: 13
         });
 
+        // set the default GPX file to load
+        var defaultGpxFileUrl = 'gpx/holycross.gpx';
+        // when the map loads, also load the default GPX file
         map.on('load', () => {
             loadGpxFromUrl(map, defaultGpxFileUrl);
         });
 
+        // utility function to load GPX from a URL onto the map
         function loadGpxFromUrl(map, gpxUrl) {
             $.ajax({
                 url: gpxUrl,
@@ -107,24 +120,30 @@
                 loadGpxFromXmlDocument(map, xml);
             });
         }
+
+        // utility function to load GPX from a string onto the map
         function loadGpxFromXmlString(map, xmlString) {
             var xml = $.parseXML(xmlString)
             loadGpxFromXmlDocument(map, xml);
         }
 
+        // main function that loads a GPX XML document onto the map
         function loadGpxFromXmlDocument(map, xml) {
 
+            // convert the GPX to GeoJSON
             var geoJson = toGeoJSON.gpx(xml);
+            // convert the GeoJSON point features to line segments
             var lineSegments = geoJsonUtils.toLineStrings(geoJson.features[0]);
             var data = lineSegments;
-            console.log(data);
 
+            // remove any prior data from the map
             if (map.getLayer('track'))
                 map.removeLayer('track');
-
             if (map.getSource('track'))
                 map.removeSource('track');
 
+            // add the data to the map, using a painting scheme 
+            // that colorizes the segments based on slope
             map.addSource('track', {
                 'type': 'geojson',
                 'data': data
@@ -143,12 +162,17 @@
                 }
             });
 
+            // get all the coordinates from all features in this data
+            // so that we can zoom and pan the map to show the data
             var allCoordinates = [];
             for (var i = 0; i < data.features.length; i++) {
                 allCoordinates = allCoordinates.concat(data.features[i].geometry.coordinates);
             }
+            // calculate the bearing of the data based on the direction from the 
+            // first coord in the data to the last
             var bearing = geoUtils.getBearing(allCoordinates[0][1], allCoordinates[0][0], allCoordinates[allCoordinates.length - 1][1], allCoordinates[allCoordinates.length - 1][0])
 
+            // zoom, pitch, and spin the map to show the data
             mapboxUtils.zoomToCoordinatesBounds(map, allCoordinates, 0, bearing, 75);
 
         }
@@ -166,7 +190,6 @@
             reader.onload = (function (theFile) {
                 return function (e) {
                     loadGpxFromXmlString(map, e.target.result);
-                    //jQuery('#ms_word_filtered_html').val(e.target.result);
                 };
             })(f);
 
@@ -174,6 +197,7 @@
             reader.readAsText(f);
         }
 
+        // just a var to hold the colorized styles (this was copied from Mapbox studio)
         var interpolatedTrackLineColorBasedOnSlopeAbsolute = [
             'interpolate',
             ['exponential', 1],
