updated ext references

--- a/Index.html
+++ b/Index.html
@@ -7,12 +7,11 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-    <script src="/lib/font-awesome/js/all.js"></script>
+    <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
     <script src='js/togeojson.js'></script>
     <script src='js/geoJsonUtils.js'></script>
     <script src='js/geoUtils.js'></script>
     <script src='js/mapboxUtils.js'></script>
-    <script src='js/jquery.js'></script>
     <script src='js/config.js'></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
     <style>
